--- a/Ventas_Jairo.csproj
+++ b/Ventas_Jairo.csproj
@@ -47,17 +47,83 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseSQL.cs" />
+    <Compile Include="FrmActualizarClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmActualizarClientes.Designer.cs">
+      <DependentUpon>FrmActualizarClientes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmActualizarOficinas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmActualizarOficinas.Designer.cs">
+      <DependentUpon>FrmActualizarOficinas.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmActualizarProducto.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmActualizarProducto.Designer.cs">
       <DependentUpon>FrmActualizarProducto.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmActualizarRepresentante.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmActualizarRepresentante.Designer.cs">
+      <DependentUpon>FrmActualizarRepresentante.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmAltaClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAltaClientes.Designer.cs">
+      <DependentUpon>FrmAltaClientes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmAltaOficina.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAltaOficina.Designer.cs">
+      <DependentUpon>FrmAltaOficina.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmAltaRepresentante.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAltaRepresentante.Designer.cs">
+      <DependentUpon>FrmAltaRepresentante.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmConsultaOficina.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmConsultaOficina.Designer.cs">
+      <DependentUpon>FrmConsultaOficina.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmConsultaRepVentas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmConsultaRepVentas.Designer.cs">
+      <DependentUpon>FrmConsultaRepVentas.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmEliminar.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmEliminar.Designer.cs">
       <DependentUpon>FrmEliminar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmEliminarCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEliminarCliente.Designer.cs">
+      <DependentUpon>FrmEliminarCliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmEliminarOficina.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEliminarOficina.Designer.cs">
+      <DependentUpon>FrmEliminarOficina.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmEliminarRepresentante.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEliminarRepresentante.Designer.cs">
+      <DependentUpon>FrmEliminarRepresentante.cs</DependentUpon>
     </Compile>
     <Compile Include="frmMenu.cs">
       <SubType>Form</SubType>
@@ -77,11 +143,23 @@
     <Compile Include="frmDescontinuarProd.Designer.cs">
       <DependentUpon>frmDescontinuarProd.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPagos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPagos.Designer.cs">
+      <DependentUpon>FrmPagos.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmpedido.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmpedido.Designer.cs">
       <DependentUpon>frmpedido.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmQueryClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmQueryClientes.Designer.cs">
+      <DependentUpon>FrmQueryClientes.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmQueryProductos.cs">
       <SubType>Form</SubType>
@@ -91,11 +169,44 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmActualizarClientes.resx">
+      <DependentUpon>FrmActualizarClientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmActualizarOficinas.resx">
+      <DependentUpon>FrmActualizarOficinas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmActualizarProducto.resx">
       <DependentUpon>FrmActualizarProducto.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmActualizarRepresentante.resx">
+      <DependentUpon>FrmActualizarRepresentante.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmAltaClientes.resx">
+      <DependentUpon>FrmAltaClientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmAltaOficina.resx">
+      <DependentUpon>FrmAltaOficina.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmAltaRepresentante.resx">
+      <DependentUpon>FrmAltaRepresentante.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmConsultaOficina.resx">
+      <DependentUpon>FrmConsultaOficina.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmConsultaRepVentas.resx">
+      <DependentUpon>FrmConsultaRepVentas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmEliminar.resx">
       <DependentUpon>FrmEliminar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmEliminarCliente.resx">
+      <DependentUpon>FrmEliminarCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmEliminarOficina.resx">
+      <DependentUpon>FrmEliminarOficina.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmEliminarRepresentante.resx">
+      <DependentUpon>FrmEliminarRepresentante.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMenu.resx">
       <DependentUpon>frmMenu.cs</DependentUpon>
@@ -106,8 +217,14 @@
     <EmbeddedResource Include="frmDescontinuarProd.resx">
       <DependentUpon>frmDescontinuarProd.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmPagos.resx">
+      <DependentUpon>FrmPagos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmpedido.resx">
       <DependentUpon>frmpedido.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmQueryClientes.resx">
+      <DependentUpon>FrmQueryClientes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmQueryProductos.resx">
       <DependentUpon>FrmQueryProductos.cs</DependentUpon>
